fixed the overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 main {
     height: fit-content;
-    width: 85vw;
+    width: 100%;
     margin: 0;
     padding: 0;
 }
@@ -23,6 +23,7 @@ h1, h2, h3{font-weight: 520;}
     justify-content: center;
     width: 100%;
     height: 100%;
+    /* min-height: 100vh; */
     margin: 0;
 } 
 .app-container{
@@ -54,7 +55,7 @@ h1, h2, h3{font-weight: 520;}
 }
 @media (max-width: 968px) {
     main{
-        width: 100vw;
+        width: 100%;
     }
     .app-container{
         flex-direction: column;
@@ -100,4 +101,10 @@ h1, h2, h3{font-weight: 520;}
 }
 .h-10rem{
     height: 10rem;
+}
+.w-5rem{
+    width: 5rem;
+}
+.w-8rem{
+    width: 8rem;
 }
